syntax = "proto3";

package pb;

option go_package = "github.com/Foedie/foedie-server-v2/gateway/pkg/auth/pb";

// ------------ LOGIN ------------ //

message LoginUserParams {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string refresh_token = 2;
    string secret_key = 3;
    string username = 4;
}

message LoginUserResponse {
    string code = 1;
    string message = 2;
    LoginResponse data = 3;
}

// ------------ REGISTER ------------ //

message CreateUserParams {
    string phone_number = 2;
    string email = 3;
    string username = 4;
    string first_name = 5;
    string last_name = 6;
    string password = 7;
    string confirm_password = 8;
}

message CreateUserResponse {
    string code = 1;
    string message = 2;
}

// ------------ VALIDATE TOKEN ------------ //

message ValidateTokenParams {
    string token = 1;
}

message ValidateTokenResponse {
    int64 status = 1;
    string error = 2;
    string uid = 3;
}


// ------------ VERIFY EMAIL ------------ //

message ValidateEmailParams {
    string token = 1;
}

message VerifyEmailParams {
    string email = 1;
}

message VerifyEmailResponse {
    string code = 1;
    string message = 2;
}

// ------------ RECOVER ACCOUNTS ------------ //

message ValidateRecoverAccountParams {
    string token = 1;
}

message RecoverAccountParams {
    string email = 1;
    string username = 2;
}

message RecoverAccountResponse {
    string code = 1;
    string message = 2;
}